.archive/kubernetes/istio-ingress/github/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: github
  namespace: istio-ingress
spec:
  host: "xunholy.github.io"
  trafficPolicy:
    tls:
      mode: SIMPLE
