.archive/kubernetes/istio-ingress/github/serviceentry.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/serviceentry_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: github
  namespace: istio-ingress
spec:
  hosts:
    - xunholy.github.io
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
