.archive/kubernetes/istio-ingress/github/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: github
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/istio-ingressgateway
  hosts:
    - '${CLUSTER_DOMAIN}'
  http:
    - match:
        - uri:
            exact: "/"
      rewrite:
        uri: "/k8s-gitops"
        authority: xunholy.github.io
      route:
        - destination:
            host: xunholy.github.io
            port:
              number: 443
